add github link in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <center><button disabled id="saveAsPngBtn">保存为PNG图片</button> <button disabled id="saveToClipboardBtn">复制图片到剪贴板</button></center>
         <br>
         <a>如果你的浏览器开了 <b>暗黑模式</b> 等 <b>插件</b> 的话，请先关掉！ 保存图片功能不支持Safari浏览器！</a>
-        <div style="text-align: right;">by <a href="https://osu.ppy.sh/users/32657919">fuyukiS</a></div>
+        <div style="text-align: right; font-family: TorusSemiBold">by <a href="https://osu.ppy.sh/users/32657919">fuyukiS</a>; <a href=https://github.com/fuyukiSmkw/osu-name-card-server>GitHub</a></div>
     </div>
 
     <div class="nameCardWrapper" id="nameCardWrapper">
