add save as html

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheets/general.css" />
     <link rel="stylesheet" href="stylesheets/index.css" />
     <script src="javascripts/dom-to-image.min.js"></script>
+    <!-- <script src="javascripts/font-to-base64.js"></script> -->
 </head>
 
 <body>
@@ -25,7 +26,7 @@
             placeholder="圆角半径 (默认短边*0.12)" size="12">px
         <br><br>
         <center><button disabled id="saveAsPngBtn">保存为PNG图片</button> <button disabled
-                id="saveToClipboardBtn">复制图片到剪贴板</button> <button disabled id="saveAsSvgBtn">保存为SVG</button></center>
+                id="saveToClipboardBtn">复制图片到剪贴板</button> <button disabled id="saveAsHtmlBtn">保存为HTML</button></center>
         <br>
         <a>如果你的浏览器开了 <b>暗黑模式</b> 等 <b>插件</b> 的话，请先关掉！ 保存图片功能不支持Safari浏览器！</a>
         <div style="text-align: right; font-family: TorusSemiBold">by <a
