--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,44 @@
 <body>
     <div class="container">
         <form id="myForm" action="javascript:void(0);">用户: <input type="text" name="username" id="usernameInput"
-                placeholder="用户名"> <button type="submit" id="submitBtn">制作名片！</button> <a id="waitStatus"> </a></form>
+                placeholder="用户名"><button type="submit" id="submitBtn">制作名片！</button> <a id="waitStatus"> </a>
+            <button class="toggleButton rightAlign" id="toggleButton" type="button"
+                onclick="toggleContent('customizationContainer', 'toggleTriangle', 'toggleButtonText', '自定义选项')">
+                <span id="toggleButtonText">展开自定义选项</span>
+                <div class="triangle" id="toggleTriangle"></div>
+            </button>
+        </form>
+        <div class="toggleContentContainer" id="customizationContainer">
+            <div class="radioChoiceContainer" id="customBgGroup">
+                背景:
+                <input type="radio" name="bgType" id="bgTypeDefault" value="default" checked>
+                <label for="bgTypeDefault">用户banner</label>
+                <input type="radio" name="bgType" id="bgTypeImage" value="image">
+                <label for="bgTypeImage">图片</label>
+                <div class="optionalInputGroup" id="customBgImageInputs">
+                    <input type="text" name="customBgImage" id="customBgImage" size="7" placeholder="图片链接">
+                </div>
+                <input type="radio" name="bgType" id="bgTypeColor" value="color">
+                <label for="bgTypeColor">颜色</label>
+                <div class="optionalInputGroup" id="customBgColorInputs">
+                    <input type="color" name="customBgColor" id="customBgColor">
+                    <input type="text" name="customBgColorText" id="customBgColorText" size="4" placeholder="#rrggbbaa">
+                </div>
+                <input type="radio" name="bgType" id="bgTypeTransparent" value="transparent">
+                <label for="bgTypeTransparent">透明</label>
+                <!-- 或颜色<input type="text"
+                    name="customBgColor" id="userBgColorInput" size="10" placeholder="#rrggbbaa"> -->
+            </div>
+            <br>
+            大小: <input type="text" name="width" id="widthInput" placeholder="宽 (默认 800)" size="10">px × <input
+                type="text" name="height" id="heightInput" placeholder="高 (默认 450)" size="10">px
+            <br><br>
+            <input type="checkbox" id="roundedCornerCheck" name="roundedCornerCheck" checked /><label
+                for="roundedCornerCheck">边框圆角</label> <input type="text" name="borderRadius" id="borderRadiusInput"
+                placeholder="圆角半径 (默认短边×0.12)" size="12">px
+            <br>
+        </div>
         <br>
-        自定义背景: <input type="text" name="customBg" id="userBgInput" placeholder="链接 (默认为用户banner)">或颜色<input type="text"
-            name="customBgColor" id="userBgColorInput" placeholder="#000000 (不需要的话留空)">
-        <br><br>
-        大小: <input type="text" name="width" id="widthInput" placeholder="宽 (默认 800)" size="10">px X <input type="text"
-            name="height" id="heightInput" placeholder="高 (默认 450)" size="10">px
-        <br><br>
-        <input type="checkbox" id="roundedCornerCheck" name="roundedCornerCheck" checked /><label
-            for="roundedCornerCheck">圆角</label> <input type="text" name="borderRadius" id="borderRadiusInput"
-            placeholder="圆角半径 (默认短边*0.12)" size="12">px
-        <br><br>
         <center><button disabled id="saveAsPngBtn">保存为PNG图片</button> <button disabled
                 id="saveToClipboardBtn">复制图片到剪贴板</button> <button disabled id="saveAsHtmlBtn">保存为HTML</button></center>
         <br>
